# tiangong-lca-calculator

./: .gitignore  AGENTS.md  Cargo.toml  LCA_SCHEMA_PLAN.md  LCA_SCHEMA_UPDATE_PLAN.md  Makefile  OPTIMIZATION_REVIEW.md  README.md
.docpact/: config.yaml
.githooks/: pre-push
.github/workflows/: ai-doc-lint.yml  ci.yml  project-sync.yml
ai/: architecture.md  doc-impact.yaml  repo.yaml  task-router.md  validation.md
crates/solver-core/: Cargo.toml
crates/solver-core/src/: cache.rs  data_builder.rs  lib.rs  service.rs  validator.rs
crates/solver-worker/: Cargo.toml
crates/solver-worker/src/: artifacts.rs  compiled_graph.rs  config.rs  contribution_path.rs  db.rs  graph_types.rs  http.rs  lib.rs  main.rs  package_artifacts.rs  package_db.rs  package_execution.rs  package_retention.rs  package_types.rs  queue.rs  readiness.rs  review_submit_gate.rs  review_submit_gate_runner.rs  snapshot_artifacts.rs  snapshot_index.rs  snapshot_retention.rs  storage.rs  types.rs
crates/suitesparse-ffi/: Cargo.toml  build.rs
crates/suitesparse-ffi/src/: lib.rs  matrix.rs  umfpack.rs
deploy/systemd/: snapshot-gc.service  snapshot-gc.timer
docs/: edge-function-integration.md  frontend-integration.md  implicit-regional-supply-mix-modeling.en.md  implicit-regional-supply-mix-modeling.md  issues.md  lca-api-contract.md  matrix-readiness-report-contract.md  provider-link-problem-process-diagnostics.md  provider-linking-current-state.md  review-submit-fast-gate-contract.md  tidas-package-contract.md
docs/agents/: repo-architecture.md  repo-validation.md
docs/plans/: 2026-03-19-tidas-export-reliability.md  2026-03-19-tidas-package-worker.md  2026-03-28-provider-linking-resolution.md
docs/sql/: 2026-03-28-provider-a-metrics.sql  (+1 more)
scripts/: build_snapshot_from_ilcd.sh  export_provider_link_diagnostics.py  export_provider_link_diagnostics.sh  export_unmatched_no_provider_diagnostics.py  export_unmatched_no_provider_diagnostics.sh  gc_lca_snapshots.sh  generate_lcia_expected.sh  run_bw25_validation.sh  run_full_compute_debug.sh  validate_additive_migration.sh  validate_lcia_targets.sh  validate_request_scope_parity.sh
tools/bw25-validator/: README.md  pyproject.toml
tools/bw25-validator/src/bw25_validator/: __init__.py  cli.py  expected_cli.py  request_scope_cli.py
(+11 files in other folders)
