[package]
name = "solver-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
dashmap.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
suitesparse-ffi = { path = "../suitesparse-ffi" }

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
