[package]
name = "solver-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zstd.workspace = true
solver-core = { path = "../solver-core" }

[lints]
workspace = true
