[package]
name = "suitesparse-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
